# comp-visual-hpintom

./: .gitignore  README.md
2025-04-23_taller0_transformaciones/: README.md
2025-04-23_taller1_transformaciones/: README.md
2025-05-08__taller_convoluciones_personalizadas/: README.md  convoluciones_personalizadas.ipynb
2025-05-08_taller_analisis_figuras_geometricas/: README.md
2025-05-08_taller_conversion_formatos_3d/: README.md
2025-05-08_taller_escenas_parametricas/: README.md
2025-05-08_taller_imagen_matriz_pixeles/: README.md
2025-05-08_taller_jerarquias_transformaciones/: README.md
2025-05-08_taller_rasterizacion_desde_cero/: README.md
2025-05-08_taller_segmentacion_formas/: README.md
2025-05-23_proyecto/: README.md  dino_game.py  game_states.py  gesture_detector.py  hollow_knight.py  laberinto_game.py  main.py  menu_renderer.py  metrics_collector.py  pose_detector.py  pyproject.toml  resumen.md
2025-05-23_proyecto/reports/: summary_report_20250726_035303.txt  summary_report_20250726_041725.txt  summary_report_20250726_042522.txt
2025-05-23_taller_espacios_proyectivos/: README.md
2025-05-23_taller_input_ui/: README.md
2025-05-23_taller_modelos_color_percepcion/: README.md
2025-06-15_taller_interpolacion_movimiento_animaciones/: README.md
2025-06-15_taller_websockets_interaccion_visual_en_tiempo_real/: README.md
2025-06-21_taller_animaciones_esqueleto_fbx_gltf/: README.md  X Bot@Drunk Idle Variation.fbx  (+2 more)
examen-computacion-visual-harrison-pinto/ejercicio_1_procesamiento/: README.md  procesamiento.py  pyproject.toml
(+136 files in other folders)
