[project]
name = "2025-05-23-proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "keyboard>=0.13.5",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
]
