[project]
name = "ejercicio-1-procesamiento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "ultralytics>=8.3.168",
]
